--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,6 +2,29 @@
 
 :root {
     --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+    --nord-polar-night-darkest: #2e3440;
+    --nord-polar-night-darker: #3b4252;
+    --nord-polar-night-dark: #434c5e;
+    --nord-polar-night-light: #4c566a;
+
+    /* Snow Storm */
+    --nord-snow-storm-lightest: #eceff4;
+    --nord-snow-storm-lighter: #e5e9f0;
+    --nord-snow-storm-light: #d8dee9;
+
+    /* Frost */
+    --nord-frost-green: #8fbcbb;
+    --nord-frost-light-blue: #88c0d0;
+    --nord-frost-blue: #81a1c1;
+    --nord-frost-dark-blue: #5e81ac;
+
+    /* Aurora */
+    --nord-aurora-red: #bf616a;
+    --nord-aurora-orange: #d08770;
+    --nord-aurora-yellow: #ebcb8b;
+    --nord-aurora-green: #a3be8c;
+    --nord-aurora-purple: #b48ead;
 }
 
 * {
